--- a/src/components/r-input/r-input.css
+++ b/src/components/r-input/r-input.css
@@ -18,6 +18,10 @@ r-input ion-item {
   --padding-end: var(--r-internal-input-padding-x);
   --padding-top: var(--r-internal-input-padding-y);
   --padding-bottom: var(--r-internal-input-padding-y);
+  /* Make background transparent to inherit from parent */
+  --background: transparent;
+  --ion-item-background: transparent;
+  background: transparent;
 }
 
 r-input ion-input {
